# gridpaste

./: .gitignore  .travis.yml  Dockerfile  Gruntfile.js  HOWTO.md  LICENSE  Makefile  README.md  app.js  bower.json  build.sh  database.js  docker-compose.yml  karma.conf.js  manage.py  package.json  pyproject.toml  requirements.in  requirements.txt  run.sh  test_build.sh  travis.yml
application/: package.json
application/test/: command.zoom.event.js  function.lexer.test.js
backend/: settings.py  urls.py  views.py
backend/gp/: settings.py  (+1 more)
browser_test/: board.element.test.js  board.point.test.js  board.shape.test.js  board.transform.test.js  command.draw.event.js  command.function.test.js  command.misc.event.js  command.transform.event.js  command.zoom.event.js  function.functions.test.js  function.lexer.test.js  function.parser.test.js  test.test.js
deploy/: gunicorn.service  post-receive-hook.sh
environment/: mongoose.js  replay.js  sequelize.js
frontend/: app.js  test_build.sh
homepage/: settings.py  urls.py  views.py  wsgi.py
migrations/: V001_Create_users_table.sql  V002_Create_pastes_table.sql
pastes/: apps.py  models.py  tokens.py  urls.py  views.py
routes/: index.js  paste.js  register.js  user.js
services/: userservice.js
static/: package-lock.json  package.json
templates/: base.html  examples.html  index.html  pastes.html  show.html
test/: pastes.js  user.js
tests/: test_gridpaste.py
user/: forms.py  models.py  urls.py  views.py
views/: examples.html  index.html  layout.html  login.html  pastes.html  register.html  show.html
(+139 files in other folders)
