[tool.poetry]
name = "backend"
version = "2.0.0"
description = ""
authors = ["bramz <me@brockramsey.com>", "jahan-addison" <jahan@jahanaddison.com]

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.2"
alembic = "^1.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
